@@ -80,6 +80,9 @@ enum class ConfigOption {
 	DESPOTIFY_USER,
 	DESPOTIFY_PASSWORD,
 	DESPOTIFY_HIGH_BITRATE,
+
+	MIXRAMP_ANALYZER,
+
 	MAX
 };
 
