@@ -49,6 +49,7 @@ pcm_sources = [
   'AudioCompress/compress.c',
   'ReplayGainAnalyzer.cxx',
   'MixRampAnalyzer.cxx',
+  'MixRampGlue.cxx',
 ]
 
 libsamplerate_dep = dependency('samplerate', version: '>= 0.1.3', required: get_option('libsamplerate'))
