@@ -1,4 +1,6 @@
 ver 0.24 (not yet released)
+* player
+  - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
 
 ver 0.23.6 (not yet released)
 
